Add new bibliography, refactor mentions to FlatSat

--- a/main.tex
+++ b/main.tex
@@ -280,7 +280,7 @@
 \input{chapters/2-conceitos}
 \input{chapters/3-revisao}
 \input{chapters/4-modelo}
-% \input{chapters/5-formalizacao}
+\input{chapters/5-desenvolvimento}
 % \input{chapters/6-experimentos}
 \input{chapters/conclusao_tcc1}
 
