Add final draft before evaluation

--- a/aftertext/references.bib
+++ b/aftertext/references.bib
@@ -1,107 +1,129 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
-
-
 %% Created for Lauro Cesar Araujo at 2013-08-21 10:57:09 -0300
-
-
 %% Saved with string encoding Unicode (UTF-8)
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @misc{hubble-missions,
-  title        = {National Aeronautics and Space Administration - NASA},
-  author       = {{National Aeronautics and Space Administration - NASA}},
-  howpublished = {\url{nasa.gov/mission_pages/hubble/servicing/index.html}},
-  year         = 2021,
-  note         = {Acessado em 30/08/2021}
+    title        = {National Aeronautics and Space Administration - NASA},
+    author       = {{National Aeronautics and Space Administration - NASA}},
+    howpublished = {\url{nasa.gov/mission_pages/hubble/servicing/index.html}},
+    year         = 2021,
+    note         = {Acessado em 30/08/2021}
 },
 
+@misc{cmocka,
+    title        = {CMocka},
+    howpublished = {\url{https://api.cmocka.org/}},
+    note         = {Acessado em 14/06/2022}
+},
 
-
+@misc{mock,
+    title        = {Unit testing best practices with .NET Core and .NET Standard},
+    author       = {Schneider, Andreas and Hrozek, Jakub},
+    howpublished = {\url{https://lwn.net/Articles/558106/}},
+    year         = 2013,
+    note         = {Acessado em 14/06/2022}
+},
 @misc{cubesat,
-  title        = {What is a CubeSat},
-  author       = {{Canadian Space Agency - CSA}},
-  howpublished = {\url{asc-csa.gc.ca/eng/satellites/cubesat/what-is-a-cubesat.asp}},
-  year         = 2018,
-  note         = {Acessado em 30/08/2021}
+    title        = {What is a CubeSat},
+    author       = {{Canadian Space Agency - CSA}},
+    howpublished = {\url{asc-csa.gc.ca/eng/satellites/cubesat/what-is-a-cubesat.asp}},
+    year         = 2018,
+    note         = {Acessado em 30/08/2021}
 },
 
 @misc{gh-actions,
-  title        = {GitHub Actions},
-  author       = {{GitHub}},
-  howpublished = {\url{github.com/features/actions}},
-  year         = {n.d.},
-  note         = {Acessado em 01/09/2021}
+    title        = {GitHub Actions},
+    author       = {{GitHub}},
+    howpublished = {\url{github.com/features/actions}},
+    note         = {Acessado em 01/09/2021}
 },
 
 @misc{obdh2-github,
-  title        = {On-Board Data Handling 2.0},
-  author       = {{SpaceLab}},
-  howpublished = {\url{https://github.com/spacelab-ufsc/obdh2}},
-  year         = {2020},
-  note         = {Acessado em 11/03/2022}
+    title        = {On-Board Data Handling 2.0},
+    author       = {{SpaceLab}},
+    howpublished = {\url{https://github.com/spacelab-ufsc/obdh2}},
+    year         = {2020},
+    note         = {Acessado em 11/03/2022}
 },
 
 @misc{eps2-github,
-  title        = {Electrical Power System 2.0},
-  author       = {{SpaceLab}},
-  howpublished = {\url{https://github.com/spacelab-ufsc/eps2}},
-  year         = {2020},
-  note         = {Acessado em 11/03/2022}
+    title        = {Electrical Power System 2.0},
+    author       = {{SpaceLab}},
+    howpublished = {\url{https://github.com/spacelab-ufsc/eps2}},
+    year         = {2020},
+    note         = {Acessado em 11/03/2022}
 },
 
 @misc{nanosats-database,
-  title        = {Nanosats Database},
-  author       = {{Kulu, Erik}},
-  howpublished = {\url{https://www.nanosats.eu/}},
-  year         = {2021},
-  note         = {Acessado em 08/09/2021}
+    title        = {Nanosats Database},
+    author       = {{Kulu, Erik}},
+    howpublished = {\url{https://www.nanosats.eu/}},
+    year         = {2021},
+    note         = {Acessado em 08/09/2021}
 },
 
 @misc{floripasat2,
-  title        = {FloripaSat-2 Doc},
-  author       = {{SpaceLab - UFSC}},
-  howpublished = {\url{https://spacelab-ufsc.github.io/floripasat2-doc/slb-fsat2-doc-v0.2.pdf}},
-  year         = 2021,
-  note         = {Acessado em 30/08/2021}
+    title        = {FloripaSat-2 Doc},
+    author       = {{SpaceLab - UFSC}},
+    howpublished = {\url{https://spacelab-ufsc.github.io/floripasat2-doc/slb-fsat2-doc-v0.2.pdf}},
+    year         = 2021,
+    note         = {Acessado em 30/08/2021}
 },
 
 @misc{floripasat-1,
-  title        = {FloripaSat-1 - A Brazilian Cubesat mission, developed by university students.},
-  author       = {{SpaceLab - UFSC}},
-  howpublished = {\url{https://floripasat.ufsc.br/}},
-  year         = 2020,
-  note         = {Acessado em 08/09/2021}
+    title        = {FloripaSat-1 - A Brazilian Cubesat mission, developed by university students.},
+    author       = {{SpaceLab - UFSC}},
+    howpublished = {\url{https://floripasat.ufsc.br/}},
+    year         = 2020,
+    note         = {Acessado em 08/09/2021}
 },
 
 @misc{mars-cubesat,
-  title        = {Mars Cube One (MarCO)},
-  author       = {JPL},
-  howpublished = {\url{https://www.jpl.nasa.gov/missions/mars-cube-one-marco}},
-  year         = 2018,
-  note         = {Acessado em 21/02/2022}
+    title        = {Mars Cube One (MarCO)},
+    author       = {JPL},
+    howpublished = {\url{https://www.jpl.nasa.gov/missions/mars-cube-one-marco}},
+    year         = 2018,
+    note         = {Acessado em 21/02/2022}
 },
 
 @misc{istsat-1,
-  title        = {ISTSat-1},
-  author       = {},
-  howpublished = {\url{https://istsat-one.tecnico.ulisboa.pt/~istsat-one.daemon/}},
-  year         = 2021,
-  note         = {Acessado em 28/02/2022}
+    title        = {ISTSat-1},
+    author       = {},
+    howpublished = {\url{https://istsat-one.tecnico.ulisboa.pt/~istsat-one.daemon/}},
+    year         = 2021,
+    note         = {Acessado em 28/02/2022}
 },
 
+@article{wichman-1995,
+author = {Wichmann, B. and Canning, A.A. and Clutterbuck, D.L. and Winsborrow, L.A. and Ward, N.J. and Marsh, William},
+year = {1995},
+month = {04},
+pages = {69 - 75},
+title = {Industrial perspective on static analysis},
+volume = {10},
+journal = {Software Engineering Journal},
+doi = {10.1049/sej.1995.0010}
+}
+
+@misc{freertos,
+    title        = {FreeRTOS},
+    author       = {},
+    howpublished = {\url{https://freertos.org/index.html}},
+    note         = {Acessado em 21/06/2022}
+},
 
 @article{aiv-cubesat,
-  author         = {Monteiro, João P. and Rocha, Rui M. and Silva, Alexandre and Afonso, Rúben and Ramos, Nuno},
-  title          = {Integration and Verification Approach of ISTSat-1 CubeSat},
-  journal        = {Aerospace},
-  volume         = {6},
-  year           = {2019},
-  number         = {12},
-  article-number = {131},
-  url            = {https://www.mdpi.com/2226-4310/6/12/131},
-  issn           = {2226-4310},
-  doi            = {10.3390/aerospace6120131}
+    author         = {Monteiro, João P. and Rocha, Rui M. and Silva, Alexandre and Afonso, Rúben and Ramos, Nuno},
+    title          = {Integration and Verification Approach of ISTSat-1 CubeSat},
+    journal        = {Aerospace},
+    volume         = {6},
+    year           = {2019},
+    number         = {12},
+    article-number = {131},
+    url            = {https://www.mdpi.com/2226-4310/6/12/131},
+    issn           = {2226-4310},
+    doi            = {10.3390/aerospace6120131}
 },
 
 @manual{cubesat-spec,
@@ -111,135 +133,260 @@
   address      = {San Luis Obispo, CA, EUA},
   year         = {2020}
 },
-
 @article{alanazi2019,
-  author         = {Alanazi, Abdulaziz and Straub, Jeremy},
-  title          = {Engineering Methodology for Student-Driven CubeSats},
-  journal        = {Aerospace},
-  volume         = {6},
-  year           = {2019},
-  number         = {5},
-  article-number = {54},
-  url            = {https://www.mdpi.com/2226-4310/6/5/54},
-  issn           = {2226-4310},
-  doi            = {10.3390/aerospace6050054}
+    author         = {Alanazi, Abdulaziz and Straub, Jeremy},
+    title          = {Engineering Methodology for Student-Driven CubeSats},
+    journal        = {Aerospace},
+    volume         = {6},
+    year           = {2019},
+    number         = {5},
+    article-number = {54},
+    url            = {https://www.mdpi.com/2226-4310/6/5/54},
+    issn           = {2226-4310},
+    doi            = {10.3390/aerospace6050054}
 },
 
 @inproceedings{panga2016,
-  title     = {Boom of the CubeSat: A Statistic Survey of CubeSats Launch in 2003--2015},
-  author    = {Panga, WJ and Bo, B and Meng, X and Yu, XZ and Guo, J and Zhou, J},
-  booktitle = {Proceedings of the 67th International Astronautical Congress (IAC), Guadalajara, Mexico},
-  pages     = {26--30},
-  year      = {2016}
+    title     = {Boom of the CubeSat: A Statistic Survey of CubeSats Launch in 2003--2015},
+    author    = {Panga, WJ and Bo, B and Meng, X and Yu, XZ and Guo, J and Zhou, J},
+    booktitle = {Proceedings of the 67th International Astronautical Congress (IAC), Guadalajara, Mexico},
+    pages     = {26--30},
+    year      = {2016}
 },
 
 @mastersthesis{burt2011,
-  author = {Burt, Robert},
-  title  = {Distributed Electrical power systems in cubesat applications},
-  school = {Utah State University},
-  year   = 2011
+    author = {Burt, Robert},
+    title  = {Distributed Electrical power systems in cubesat applications},
+    school = {Utah State University},
+    year   = 2011
 },
 
 @article{marcelino2020-1,
-  author  = {Marcelino, Gabriel Mariano and Vega-Martinez, Sara and Seman, Laio Oriel and Kessler Slongo, Leonardo and Bezerra, Eduardo Augusto},
-  journal = {"IEEE Latin America Transactions"},
-  title   = {"A Critical Embedded System Challenge: The FloripaSat-1 Mission"},
-  year    = {2020},
-  volume  = {18},
-  number  = {02},
-  url     = {https://ieeexplore.ieee.org/document/9085277},
-  pages   = {249-256},
-  doi     = {10.1109/TLA.2020.9085277}
+    author  = {Marcelino, Gabriel Mariano and Vega-Martinez, Sara and Seman, Laio Oriel and Kessler Slongo, Leonardo and Bezerra, Eduardo Augusto},
+    journal = {"IEEE Latin America Transactions"},
+    title   = {"A Critical Embedded System Challenge: The FloripaSat-1 Mission"},
+    year    = {2020},
+    volume  = {18},
+    number  = {02},
+    url     = {https://ieeexplore.ieee.org/document/9085277},
+    pages   = {249-256},
+    doi     = {10.1109/TLA.2020.9085277}
 },
 
-
 @article{marcelino2020-2,
-  author  = {"Marcelino, Gabriel Mariano and Morsch, Filho Edemar and Vega-Martinez Sara and Pio, De Mattos André Martins and Oriel, Seman Laio and Kessler, Slongo Leonardo and Augusto, Bezerra Eduardo"},
-  journal = {"Journal of Systems Engineering and Electronics"},
-  title   = {"Qualification and validation test methodology of the open-source CubeSat FloripaSat-I"},
-  year    = {2020},
-  url     = {https://ieeexplore.ieee.org/document/9316404},
-  volume  = {31},
-  number  = {6},
-  pages   = {1230-1244},
-  doi     = {10.23919/JSEE.2020.000103}
+    author  = {"Marcelino, Gabriel Mariano and Morsch, Filho Edemar and Vega-Martinez Sara and Pio, De Mattos André Martins and Oriel, Seman Laio and Kessler, Slongo Leonardo and Augusto, Bezerra Eduardo"},
+    journal = {"Journal of Systems Engineering and Electronics"},
+    title   = {"Qualification and validation test methodology of the open-source CubeSat FloripaSat-I"},
+    year    = {2020},
+    url     = {https://ieeexplore.ieee.org/document/9316404},
+    volume  = {31},
+    number  = {6},
+    pages   = {1230-1244},
+    doi     = {10.23919/JSEE.2020.000103}
 },
 
 @article{marcelino2021,
-  title    = {In-orbit preliminary results from the open-source educational nanosatellite FloripaSat-I},
-  journal  = {Acta Astronautica},
-  volume   = {188},
-  pages    = {64-80},
-  year     = {2021},
-  issn     = {0094-5765},
-  doi      = {https://doi.org/10.1016/j.actaastro.2021.07.001},
-  url      = {https://www.sciencedirect.com/science/article/pii/S0094576521003489},
-  author   = {Gabriel Mariano Marcelino and Edemar {Morsch Filho} and Sara Vega Martinez and Laio Oriel Seman and Eduardo Augusto Bezerra},
-  keywords = {Aerospace engineering, Cubesats, Embedded systems, In-orbit validation, Flight heritage, Nanosatellites}
+    title    = {In-orbit preliminary results from the open-source educational nanosatellite FloripaSat-I},
+    journal  = {Acta Astronautica},
+    volume   = {188},
+    pages    = {64-80},
+    year     = {2021},
+    issn     = {0094-5765},
+    doi      = {https://doi.org/10.1016/j.actaastro.2021.07.001},
+    url      = {https://www.sciencedirect.com/science/article/pii/S0094576521003489},
+    author   = {Gabriel Mariano Marcelino and Edemar {Morsch Filho} and Sara Vega Martinez and Laio Oriel Seman and Eduardo Augusto Bezerra},
+    keywords = {Aerospace engineering, Cubesats, Embedded systems, In-orbit validation, Flight heritage, Nanosatellites}
 },
 
- @book{software-automation,
-  title     = {Software test automation},
-  author    = {Fewster, Mark and Graham, Dorothy},
-  year      = {1999},
-  publisher = {Addison-Wesley Reading}
+@book{software-automation,
+    title     = {Software test automation},
+    author    = {Fewster, Mark and Graham, Dorothy},
+    year      = {1999},
+    publisher = {Addison-Wesley Reading}
 },
 
 @book{ecss-software-engineering,
-  title     = {Space engineering - Software engineering Handbook},
-  author    = {European Cooperation for Space Standardization},
-  year      = {2012},
-  publisher = {ESA Requirements and Standards Division}
+    title     = {Space engineering - Software engineering Handbook},
+    author    = {European Cooperation for Space Standardization},
+    year      = {2012},
+    publisher = {ESA Requirements and Standards Division}
 },
 
-
 @book{devops-handbook,
-  title     = {The DevOps Handbook: How to Create World-Class Agility, Reliability, and Security in Technology Organizations},
-  author    = {Gene Kim, Jez Humble, Patric Debois, and John Willis},
-  publisher = {IT Revolution},
-  isbn      = {978-1942788003},
-  year      = {2016},
-  series    = {},
-  edition   = {1},
-  volume    = {}
+    title     = {The DevOps Handbook: How to Create World-Class Agility, Reliability, and Security in Technology Organizations},
+    author    = {Gene Kim, Jez Humble, Patric Debois, and John Willis},
+    publisher = {IT Revolution},
+    isbn      = {978-1942788003},
+    year      = {2016},
+    series    = {},
+    edition   = {1},
+    volume    = {}
 },
 
 @book{engenharia-software,
-  title     = {Engenharia de Software: Conceitos e Práticas},
-  author    = {Raul Sidnei Wazlawick},
-  publisher = {Elsevier},
-  isbn      = {978-8535260847},
-  year      = {2019},
-  series    = {},
-  edition   = {2},
-  volume    = {}
+    title     = {Engenharia de Software: Conceitos e Práticas},
+    author    = {Raul Sidnei Wazlawick},
+    publisher = {Elsevier},
+    isbn      = {978-8535260847},
+    year      = {2019},
+    series    = {},
+    edition   = {2},
+    volume    = {}
 },
 
 @book{practitioner-guide,
-  title     = {A practitioner's guide to software test design},
-  author    = {Copeland, Lee},
-  year      = {2004},
-  publisher = {Artech House}
+    title     = {A practitioner's guide to software test design},
+    author    = {Copeland, Lee},
+    year      = {2004},
+    publisher = {Artech House}
 },
 
 @article{ieee-610,
-  author  = {},
-  journal = {IEEE Std 610.12-1990},
-  title   = {IEEE Standard Glossary of Software Engineering Terminology},
-  year    = {1990},
-  volume  = {},
-  number  = {},
-  pages   = {1-84},
-  doi     = {10.1109/IEEESTD.1990.101064}
+    author  = {},
+    journal = {IEEE Std 610.12-1990},
+    title   = {IEEE Standard Glossary of Software Engineering Terminology},
+    year    = {1990},
+    volume  = {},
+    number  = {},
+    pages   = {1-84},
+    doi     = {10.1109/IEEESTD.1990.101064}
 },
 
- @article{ieeestd-829,
-  author  = {},
-  journal = {IEEE Std 829-1983},
-  title   = {IEEE Standard for Software Test Documentation},
-  year    = {1983},
-  volume  = {},
-  number  = {},
-  pages   = {1-48},
-  doi     = {10.1109/IEEESTD.1983.81615}
-}
+@article{ieeestd-829,
+    author  = {},
+    journal = {IEEE Std 829-1983},
+    title   = {IEEE Standard for Software Test Documentation},
+    year    = {1983},
+    volume  = {},
+    number  = {},
+    pages   = {1-48},
+    doi     = {10.1109/IEEESTD.1983.81615}
+},
+
+@inproceedings{kinsman-2021,
+    author={Kinsman, Timothy and Wessel, Mairieli and Gerosa, Marco A. and Treude, Christoph},
+    booktitle={2021 IEEE/ACM 18th International Conference on Mining Software Repositories (MSR)}, 
+    title={How Do Software Developers Use GitHub Actions to Automate Their Workflows?}, 
+    year={2021},
+    volume={},
+    number={},
+    pages={420-431},
+    doi={10.1109/MSR52588.2021.00054}
+},
+
+@book{chris-hadfield,
+   title =     {An Astronaut's Guide to Life on Earth},
+   author =    {Hadfield, Chris},
+   publisher = {Little, Brown and Company},
+   isbn =      {9780316253017; 9780345812728; 0345812727; 0316253014},
+   year =      {2013},
+   edition =   {First Edition},
+},
+
+@ARTICLE{malaiya-2002,
+  author={Malaiya, Y.K. and Li, M.N. and Bieman, J.M. and Karcich, R.},
+  journal={IEEE Transactions on Reliability}, 
+  title={Software reliability growth with test coverage}, 
+  year={2002},
+  volume={51},
+  number={4},
+  pages={420-426},
+  doi={10.1109/TR.2002.804489}
+},
+
+@ARTICLE{chen-2001,
+  author={Chen, M.-H. and Lyu, M.R. and Wong, W.E.},
+  journal={IEEE Transactions on Reliability}, 
+  title={Effect of code coverage on software reliability measurement}, 
+  year={2001},
+  volume={50},
+  number={2},
+  pages={165-170},
+  doi={10.1109/24.963124}
+},
+
+@article{Yakovyna-2021,
+    title = {Reliability assessment of CubeSat nanosatellites flight software by high-order Markov chains},
+    journal = {Procedia Computer Science},
+    volume = {192},
+    pages = {447-456},
+    year = {2021},
+    note = {Knowledge-Based and Intelligent Information & Engineering Systems: Proceedings of the 25th International Conference KES2021},
+    issn = {1877-0509},
+    doi = {https://doi.org/10.1016/j.procs.2021.08.046},
+    url = {https://www.sciencedirect.com/science/article/pii/S1877050921015337},
+    author = {Vitaliy Yakovyna and Ivan Symets},
+    keywords = {reliability, software, architecture-based model, high-order Markov chain},
+    abstract = {In complex software, such as various intelligent monitoring and control systems, the requirements for its reliability and safety increase. However, traditional reliability models cannot longer describe its reliability behavior with sufficient accuracy. This paper presents an approach to software reliability assessment using high-order Markov chains on an example of CubeSat nanosatellites flight software. The method uses the developed algorithm of high-order Markov process representation through an equivalent first-order process. The simulation results show that high-order Markov chains can increase the accuracy of the failure rate assessment up to 50\%. Hence, the usage of the high-order reliability models is obvious for accurate and reliable evaluation of software reliability and safety.}
+},
+
+@ARTICLE{gonzales-2019,
+  author={Gonzalez, Carlos E. and Rojas, Camilo J. and Bergel, Alexandre and Diaz, Marcos A.},
+  journal={IEEE Access}, 
+  title={An Architecture-Tracking Approach to Evaluate a Modular and Extensible Flight Software for CubeSat Nanosatellites}, 
+  year={2019},
+  volume={7},
+  number={},
+  pages={126409-126429},
+  doi={10.1109/ACCESS.2019.2927931}
+  
+},
+
+@ARTICLE{nathaniel-2008,
+  author={Ayewah, Nathaniel and Pugh, William and Hovemeyer, David and Morgenthaler, J. David and Penix, John},
+  journal={IEEE Software}, 
+  title={Using Static Analysis to Find Bugs}, 
+  year={2008},
+  volume={25},
+  number={5},
+  pages={22-29},
+  doi={10.1109/MS.2008.130}
+},
+
+@misc{cppcheck,
+    title        = { Cppcheck - A tool for static C/C++ code analysis},
+    howpublished = {\url{http://cppcheck.net/}},
+    note         = {Acessado em 29/06/2022}
+},
+
+@misc{gnu-ld,
+    title        = { GNU Linker},
+    howpublished = {\url{https://ftp.gnu.org/old-gnu/Manuals/ld-2.9.1/html_mono/ld.html}},
+    year         = {1994},
+    note         = {Acessado em 01/07/2022}
+},
+
+@ARTICLE{tscherbakova-1998,
+  author={Tscherbakova, N. N. and Beletskii, V. V. and Sozonov, V. V.},
+  journal={Cosmic Research}, 
+  title={Stabilization of Heliosynchronous Orbits of an Earth's Artificial Satellite by Solar Pressure}, 
+  year={1998},
+  volume={17},
+  number={4},
+  pages={393-401},
+  doi={10.1109/MS.2008.130}
+},
+
+@ARTICLE{pahl-2015,
+
+  author={Pahl, Claus},
+
+  journal={IEEE Cloud Computing}, 
+
+  title={Containerization and the PaaS Cloud}, 
+
+  year={2015},
+
+  volume={2},
+
+  number={3},
+
+  pages={24-31},
+
+  doi={10.1109/MCC.2015.51}}
+
+
+
+
+
+
