--- a/beforetext/siglas.tex
+++ b/beforetext/siglas.tex
@@ -5,6 +5,7 @@
 \begin{siglas}
   \item[ AIV ] \emph{Assembly, Integration, and Verification}
   \item[ CSA ] \textit{Canadian Space Agency}
+  \item[ FlatSat ] Plataforma de testes para módulos CubeSat
   \item[ NASA ] \textit{National Aeronautics and Space Administration}
   \item[ SpaceLab ] Laboratório de Pesquisa em Tecnologias Espaciais - UFSC
   \item[ UFSC ] Universidade Federal de Santa Catarina
