--- a/beforetext/beforetext.tex
+++ b/beforetext/beforetext.tex
@@ -26,7 +26,7 @@
 % 	\OnehalfSpacing
 % 	\centering
 % 	\imprimirautor\\%
-% 	\vspace*{10pt}
+% 	\vspace*{10pt}		
 % 	\textbf{\imprimirtitulo}%
 % 	\ifnotempty{\imprimirsubtitulo}{:~\imprimirsubtitulo}\\%
 % 	%		\vspace*{31.5pt}%3\baselineskip
@@ -66,34 +66,39 @@
 % ---
 % Dedicatória
 % ---
-% \begin{dedicatoria}
-% 	\vspace*{\fill}
-% 	\noindent
-% 	\begin{adjustwidth*}{}{5.5cm}
-% 		\raggedleft
-% 		Dedicatória
-% 	\end{adjustwidth*}
-% \end{dedicatoria}
+\begin{dedicatoria}
+	\vspace*{\fill}
+	\noindent
+	\begin{adjustwidth*}{}{5.5cm} 
+		\raggedleft       
+		À Maria, com amor. Minha companheira, amiga e por vezes revisora voluntária. Sua ajuda e motivação fez este trabalho comigo.
+	\end{adjustwidth*}
+\end{dedicatoria}
 % ---
 
 % ---
 % Agradecimentos
 % ---
-% \begin{agradecimentos}
-    % Agradecimentos
-% \end{agradecimentos}
+\begin{agradecimentos}
+    Agradeço a meus orientadores, sem os quais este trabalho não seria possível;
+    Aos membros do SpaceLab, em especial a equipe do FloripaSat-2 pela ajuda e suporte;
+    À minha família, especialmente minha mãe, que celebrou, reclamou, agradeceu e chorou comigo durante toda a graduação;
+    À todos os servidores da UFSC, por manter e prover educação pública, gratuita e de qualidade;
+\end{agradecimentos}
 % ---
 
 % ---
 % Epígrafe
 % ---
-% \begin{epigrafe}
-% 	\vspace*{\fill}
-% 	\begin{flushright}
-% 		\textit{``Epígrafe''\\
-% 			(Autor, Fonte, Ano)}
-% 	\end{flushright}
-% \end{epigrafe}
+\begin{epigrafe}
+	\vspace*{\fill}
+	\begin{flushright}
+		\textit{``O êxito precoce é um péssimo professor. Quando isso acontece, somos
+                  recompensados por nossa falta de preparação e, quando nos vemos
+                  no meio de uma situação para a qual devemos nos preparar, não somos capazes. Não sabemos como fazê-lo.'' \\
+			(Chris Hadfield, An Astronaut's Guide to Life on Earth, 2013)}
+	\end{flushright}
+\end{epigrafe}
 % ---
 
 % ---
@@ -104,20 +109,9 @@
 \setlength{\absparsep}{18pt} % ajusta o espaçamento dos parágrafos do resumo
 \begin{resumo}
 	\SingleSpacing
-	Satélites artificiais são projetos que demandam níveis elevados de confiabilidade de seus módulos.
-	Apesar de alguns projetos permitirem atualizações posteriores a firmware e programas,
-	são raros os casos onde é possível revisar e corrigir hardware.
-	Por esse motivo a etapa de testes e AIV (\textit{Assembly, Integration, and Verification}) é crucial
-	para a garantia de que o projeto não corra mais riscos do que os que são inerentes à área.
-	Esses fatores são amplificados quando tratamos de \textit{CubeSats}, que possuem escopo e orçamentos
-	menores quando comparados a grandes projetos governamentais e/ou comerciais.
-	Este trabalho propõe a implementação de um sistema de \textit{workflows} hospedados na plataforma de
-	controle de versionamento \textit{GitHub} que, aliados à funcionalidade GitHub Actions, permitirá a
-	execução automatizada de testes no contexto dos planos de
-	\emph{Assembly, Integration, and Verification}(AIV) da missão FloripaSat-2 e, posteriormente, análise
-	e interpretação dos dados coletados de modo a obter resultados qualitativos e quantitativos da execução.
-
-
+	Satélites artificiais são projetos que demandam níveis elevados de confiabilidade de seus módulos. Apesar de alguns projetos permitirem atualizações posteriores a firmware e programas, são raros os casos onde é possível revisar e corrigir hardware. Por esse motivo a etapa de testes e AIV (\textit{Assembly, Integration, and Verification}) é crucial para a garantia de que o projeto não corra mais riscos do que os que são inerentes à área. Esses fatores são amplificados quando tratamos de \textit{CubeSats}, que possuem escopo e orçamentos menores quando comparados a grandes projetos governamentais e/ou comerciais. Este trabalho propõe a implementação de um sistema de \textit{workflows} hospedados na plataforma de controle de versionamento \textit{GitHub} que, aliados à funcionalidade GitHub Actions, permitirá a execução automatizada de testes no contexto dos planos de \emph{Assembly, Integration, and Verification}(AIV) da missão FloripaSat-2 e, posteriormente, análise e interpretação dos dados coletados de modo a obter resultados qualitativos e quantitativos da execução.
+	
+	
 	\textbf{Palavras-chave}: CubeSat. Nanossatélite. FloripaSat-2. AIV.
 \end{resumo}
 
@@ -125,27 +119,17 @@
 \begin{resumo}[Abstract]
 	\SingleSpacing
 	\begin{otherlanguage*}{english}
-	    Artificial Satellites are projects that demand highly reliable modules.
-		Despite some missions allowing post-deployment updates to firmware and software, cases where it is
-		possible to perform hardware maintenance are rare. Because of this fact, the
-		\textit{Assembly, Integration and Verification} (AIV) process is crucial to guarantee that the
-		project doesn't face more risks than those which are inerent of a space mission.
-		These factores are intensified when dealing with \textit{CubeSats}, that statistically have lower
-		budgets and scope when compared to large scale governmental and/or commercial space missions.
-		This article proposes the implementation of a test automation workflow system hosted at GitHub that
-		will make use of the GitHub Actions tool to allow automated execution of tests during the AIV step
-		of the FloripaSat-2 mission, and lastly, will allow collection and analysis of data in order to draw
-		relevant conclusions regarding the execution.
-
-
+	    Artificial Satellites are projects that demand highly reliable modules. Despite some missions allowing post-deployment updates to firmware and software, cases where it is possible to perform hardware maintenance are rare. Because of this fact, the \textit{Assembly, Integration and Verification} (AIV) process is crucial to guarantee that the project doesn't face more risks than those which are inerent of a space mission. These factores are intensified when dealing with \textit{CubeSats}, that statistically have lower budgets and scope when compared to large scale governmental and/or commercial space missions. This article proposes the implementation of a test automation workflow system hosted at GitHub that will make use of the GitHub Actions tool to allow automated execution of tests during the AIV step of the FloripaSat-2 mission, and lastly, will allow collection and analysis of data in order to draw relevant conclusions regarding the execution.
+	
+	
 		\textbf{Keywords}: CubeSat. Nanosatellite. FloripaSat-2. AIV.
 	\end{otherlanguage*}
 \end{resumo}
-%% resumo em francês
+%% resumo em francês 
 %\begin{resumo}[Résumé]
 % \begin{otherlanguage*}{french}
 %    Il s'agit d'un résumé en français.
-%
+% 
 %   \textbf{Mots-clés}: latex. abntex. publication de textes.
 % \end{otherlanguage*}
 %\end{resumo}
@@ -154,7 +138,7 @@
 %\begin{resumo}[Resumen]
 % \begin{otherlanguage*}{spanish}
 %   Este es el resumen en español.
-%
+%  
 %   \textbf{Palabras clave}: latex. abntex. publicación de textos.
 % \end{otherlanguage*}
 %\end{resumo}
@@ -169,7 +153,7 @@
 	\listoffigures*
 	\cleardoublepage
 	% ---
-
+	
 	% ---
 	% inserir lista de quadros
 	% ---
@@ -177,34 +161,34 @@
 	\listofquadros*
 	\cleardoublepage
 	% ---
-
+	
 	% ---
 % 	inserir lista de tabelas
 % 	% ---
-% 	\pdfbookmark[0]{\listtablename}{lot}
-% 	\listoftables*
-% 	\cleardoublepage
+	\pdfbookmark[0]{\listtablename}{lot}
+	\listoftables*
+	\cleardoublepage
 	% ---
-
-
+	
+	
 	% ---
 	% inserir lista de abreviaturas e siglas (devem ser declarados no preambulo)
 	% ---
 	\input{beforetext/siglas}
 	% ---
-
+	
 	% ---
 	% inserir lista de símbolos (devem ser declarados no preambulo)
 	% ---
 % 	\input{beforetext/simbolos}
 	% ---
-
+	
 	% ---
 	% inserir o sumario
 	% ---
 	\pdfbookmark[0]{\contentsname}{toc}
 	\tableofcontents*
 	\cleardoublepage
-
+	
 }%hidelinks
 % ---
